# dre_production

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  streamlit_app.py
configs/: base.yaml  eeg_example.yaml  ehr_example.yaml  mri_example.yaml  multimodal_example.yaml
data/: README.md
data/manifests/: chbmit_expected_paths.txt  mimic_demo_expected_paths.txt  openneuro_expected_paths.txt
docs/: DATA_SETUP.md
notebooks/: ehr_pipeline_walkthrough.ipynb  multimodal_pipeline_walkthrough.ipynb
scripts/: bootstrap_public_data.py  generate_progress_visuals.py  validate_data_paths.py
src/core/: __init__.py  artifacts.py  config.py  contracts.py
src/datasets/: __init__.py  eeg_patient_dataset_builder.py  eeg_pipeline_runner.py  ehr_patient_dataset_builder.py  ehr_pipeline_runner.py  mri_pipeline_runner.py  mri_subject_dataset_builder.py  (+2 more)
tests/: test_artifacts.py  test_config.py  test_contracts.py  test_dataset_profiler.py  test_eeg_feature_builder.py  test_eeg_loader.py  test_eeg_patient_dataset_builder.py  test_eeg_pipeline_runner.py  test_ehr_baseline_pipeline.py  test_ehr_evidence_builder.py  test_ehr_loader.py  test_ehr_patient_dataset_builder.py  test_ehr_pipeline_runner.py  test_evidence_model.py  test_identity_linkage.py  test_likely_dre_definition.py  test_manifest_writer.py  test_mri_feature_builder.py  test_mri_loader.py  test_mri_pipeline_runner.py  test_mri_subject_dataset_builder.py  test_multimodal_baseline_pipeline.py  test_multimodal_fusion_dataset_builder.py  test_multimodal_pipeline_runner.py  test_run_summary_writer.py
(+21 files in other folders)
