[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dre_production"
version = "0.1.0"
description = "Production scaffold for computable likely drug-resistant epilepsy inference."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "DRE Production Team" }
]
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "pyarrow>=15.0.0",
  "scikit-learn>=1.4.0",
  "pyyaml>=6.0.0",
  "matplotlib>=3.8.0",
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]
